--- a/css/todos.css
+++ b/css/todos.css
@@ -339,6 +339,8 @@ body {
 }
 .todoapp .content ul.todo-list li:hover {
     background-color: #eee;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 /* line 22, /opt/ree/lib/ruby/gems/1.8/gems/compass-0.10.5/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 .todoapp .content ul.todo-list li:after {
