--- a/css/todos.css
+++ b/css/todos.css
@@ -74,7 +74,6 @@ body {
     position: relative;
     font-size: 24px;
     line-height: 1.1em;
-    border-bottom: 1px solid #cccccc;
 }
 .todo-list li:after {
     content: "\0020";
@@ -329,16 +328,14 @@ body {
 .todoapp .content ul.todo-list {
 	margin-top: 10px;
 }
-/* line 57 */
 .todoapp .content ul.todo-list li {
-    padding: 15px 20px 15px 0;
-    position: relative;
-    font-size: 24px;
-    border-bottom: 1px solid #cccccc;
-    cursor: move;
+    background-color: #F7F7F7;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    margin-bottom: 2px;
 }
 .todoapp .content ul.todo-list li:hover {
-    background-color: #eee;
+    background-color: #ECF1EF;
     -moz-border-radius: 15px;
     border-radius: 15px;
 }
