--- a/js/templates/stats.html
+++ b/js/templates/stats.html
@@ -1,14 +1,17 @@
 {{#total}}
 <span class="todo-count">
-    <span class="number">{{ remaining }}</span>
-    <span class="word">
-    {{#remainingWord}} items {{/remainingWord}} 
-    {{^remainingWord}} item {{/remainingWord}}
-    </span> left.
-</span>
-    <span class="hint">
-    Drag tasks from one list into another and vice versa.
+    <span class="number">
+        {{ remaining }}
     </span>
+    <span class="word">
+        {{#remainingWord}} items {{/remainingWord}} 
+        {{^remainingWord}} item {{/remainingWord}}
+    </span>
+    left.
+</span>
+<span class="hint">
+    Drag tasks from one list into another and vice versa.
+</span>
 {{/total}}
 <!--<% if (done) { %>
 <span class="todo-clear">
