--- a/js/templates/content.html
+++ b/js/templates/content.html
@@ -1,9 +1,14 @@
 <div id="create-todo">
-<input id="new-todo" placeholder="What needs to be done?" type="text" />
-<span class="ui-tooltip-top" style="display:none;">Press Enter to save this task</span>
+    <input id="new-todo" placeholder="What needs to be done?" type="text" />
+    <span class="ui-tooltip-top" style="display:none;">
+        Press Enter to save this task
+    </span>
 </div>
 
 <div id="todos">
-<ul id="todo-list" class="todo-list connectedSortable"></ul>
+    <ul id="todo-list" class="todo-list connectedSortable"></ul>
 </div>
+
 <div id="todo-stats"></div>
+
+<div id="navigator"></div>
