Fixed router link action. #14

--- a/js/templates/navigator.html
+++ b/js/templates/navigator.html
@@ -2,5 +2,6 @@
 <span class="navigator">
     <a href="#display/page0/perPage1">1</a>
     <a href="#display/page1/perPage1">2</a>
+    <a href="#display/page2/perPage1">3</a>
 </span>
 {{/navigator}}
